Fixed overflow of upload fields and added placeholders

--- a/client/src/pages/Upload/Upload.css
+++ b/client/src/pages/Upload/Upload.css
@@ -3,7 +3,9 @@
     background-image: url("./images/blackboard.jpg");
     background: cover; 
     width: 100%;
-    height: 960px;
+    height: 1500px;
+    overflow: overlay;
+
 }
 
 .uploadArea {
@@ -59,7 +61,8 @@ img {
     background-image: url("./images/blackboard.jpg");
     background: cover; 
     width: 100%;
-    height: 920px;
+    height: 1500px;
+    overflow: overlay;
     margin-top: -5%;
 }
 
